--- a/VideoUploader.API/appsettings.Development.json
+++ b/VideoUploader.API/appsettings.Development.json
@@ -9,9 +9,12 @@
     }
   },
   "AllowedHosts": "*",
-  "RabbitMQConnection": {    
+  "RabbitMQConnection": {
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "FileStorageSettings": {
+    "VideoPath": "..\\VideoUploader.API\\Files"
   }
 }
