--- a/VideoUploader.API/appsettings.json
+++ b/VideoUploader.API/appsettings.json
@@ -1,6 +1,5 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     "DefaultConnection": "Server=sqlserver,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" //docker    
   },
   "Logging": {
@@ -12,8 +11,10 @@
   "AllowedHosts": "*",
   "RabbitMQConnection": {
     "Host": "rabbitmq",
-    //"Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "FileStorageSettings": {
+    "VideoPath": "Files"
   }
 }
