--- a/VideoUploader.Consumer/appsettings.Development.json
+++ b/VideoUploader.Consumer/appsettings.Development.json
@@ -13,5 +13,8 @@
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "FileStorageSettings": {
+    "VideoPath": "..\\VideoUploader.API\\Files"
   }
 }
