--- a/VideoUploader.Consumer/appsettings.json
+++ b/VideoUploader.Consumer/appsettings.json
@@ -13,5 +13,8 @@
     "Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest"
+  },
+  "FileStorageSettings": {
+    "VideoPath": "Files"
   }
 }
