--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -23,10 +23,10 @@ jobs:
       run: dotnet restore VideoUploader.sln
 
     - name: Build
-      run: dotnet build VideoUploader.sln --configuration Release --no-restore -nowarn:CS8618,CS8766,CS8603,CS8625,CS8604,CS1998
+      run: dotnet build VideoUploader.sln --configuration Release --no-restore -nowarn:CS8618,CS8766,CS8603,CS8625,CS8604,CS1998,CS8629,CS8601,CA1416
 
     - name: Test
       run: dotnet test VideoUploader.Tests/VideoUploader.Tests.csproj --filter "Category=Unit"
       
     - name: Publish
-      run: dotnet publish -c Release --property:PublishDir=Publish -nowarn:CS8618,CS8766,CS8603,CS8625,CS8604,CS1998
+      run: dotnet publish -c Release --property:PublishDir=Publish -nowarn:CS8618,CS8766,CS8603,CS8625,CS8604,CS1998,CS8629,CS8601,CA1416
