--- a/VideoUploader.Consumer/VideoUploader.Consumer.csproj
+++ b/VideoUploader.Consumer/VideoUploader.Consumer.csproj
@@ -9,6 +9,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
 		<PackageReference Include="FFMpegCore" Version="5.2.0" />
 		<PackageReference Include="FFMpegCore.Extensions.SkiaSharp" Version="5.0.2" />
 		<PackageReference Include="FFMpegCore.Extensions.System.Drawing.Common" Version="5.0.2" />
