--- a/VideoUploader.Tests/VideoUploader.Tests.csproj
+++ b/VideoUploader.Tests/VideoUploader.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,6 +21,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VideoUploader.API\VideoUploader.API.csproj" />
+    <ProjectReference Include="..\VideoUploader.Models\VideoUploader.Models.csproj" />
+    <ProjectReference Include="..\VideoUploader.Services\VideoUploader.Services.csproj" />
   </ItemGroup>
 
 </Project>
