[UPDATE] Adicionado a persistência no banco MongoDB

--- a/VideoUploader.API/appsettings.Development.json
+++ b/VideoUploader.API/appsettings.Development.json
@@ -16,5 +16,10 @@
   },
   "FileStorageSettings": {
     "VideoPath": "..\\VideoUploader.API\\Files"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "VideoAnalysisDb",
+    "CollectionName": "VideoAnalyses"
   }
 }
