--- a/VideoUploader.API/appsettings.json
+++ b/VideoUploader.API/appsettings.json
@@ -16,5 +16,10 @@
   },
   "FileStorageSettings": {
     "VideoPath": "Files"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://mongodb:27017",
+    "DatabaseName": "VideoAnalysisDb",
+    "CollectionName": "VideoAnalyses"
   }
 }
