--- a/VideoUploader.Consumer/appsettings.json
+++ b/VideoUploader.Consumer/appsettings.json
@@ -16,5 +16,10 @@
   },
   "FileStorageSettings": {
     "VideoPath": "Files"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://mongodb:27017", // 'mongodb' é o nome do serviço no docker-compose
+    "DatabaseName": "VideoAnalysisDb",
+    "CollectionName": "VideoAnalyses"
   }
 }
