--- a/VideoUploader.Data/VideoUploader.Data.csproj
+++ b/VideoUploader.Data/VideoUploader.Data.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+		<PackageReference Include="MongoDB.Driver" Version="3.4.3" />
 		<PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.103.9.3" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.103.9.3" />
 	</ItemGroup>
