--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ networks:
 volumes:
   video-files:
     driver: local
+  mongo-data:
+    driver: local
     
 services:
   videouploaderapi:
@@ -62,3 +64,26 @@ services:
       - monitoring
     ports:
       - 11433:11433
+  mongodb:
+    image: mongodb/mongodb-community-server:latest
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    networks:
+      - monitoring
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    restart: always
+    ports:
+      - "8082:8081"
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_PORT=27017      
+    depends_on:
+      - mongodb
+    networks:
+      - monitoring
