[UPDATE] Adicionado as notificações via SignalR e Redis ao analisar o vídeo

--- a/VideoUploader.API/appsettings.json
+++ b/VideoUploader.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" //docker    
+    "DefaultConnection": "Server=sqlserver,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "RedisConnection": "redis:6379"
   },
   "Logging": {
     "LogLevel": {
