--- a/VideoUploader.Consumer/appsettings.json
+++ b/VideoUploader.Consumer/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=sqlserver,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "RedisConnection": "redis:6379"
   },
   "Logging": {
     "LogLevel": {
@@ -18,7 +19,7 @@
     "VideoPath": "Files"
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://mongodb:27017", // 'mongodb' é o nome do serviço no docker-compose
+    "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "VideoAnalysisDb",
     "CollectionName": "VideoAnalyses"
   }
