--- a/VideoUploader.API/appsettings.Development.json
+++ b/VideoUploader.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost,1433;Database=VideoDatabase;User ID=sa;Password=sqlRRC00!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "RedisConnection": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
