--- a/VideoUploader.Consumer/VideoUploader.Consumer.csproj
+++ b/VideoUploader.Consumer/VideoUploader.Consumer.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="FFMpegCore.Extensions.System.Drawing.Common" Version="5.0.2" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
 		<PackageReference Include="ZXing.Net" Version="0.16.10" />
