--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ volumes:
     driver: local
   mongo-data:
     driver: local
+  redis-data:
+    driver: local
     
 services:
   videouploaderapi:
@@ -85,5 +87,15 @@ services:
       - ME_CONFIG_MONGODB_PORT=27017      
     depends_on:
       - mongodb
+    networks:
+      - monitoring
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
     networks:
       - monitoring
