[UPDATE] Adicionando melhorias. 1 - Ajustes de layout na index.hml 2 - Correção ao ler os QrCodes 3 - Adicionado novos endpoints 4 - Ajustes diversos

--- a/VideoUploader.API/appsettings.Development.json
+++ b/VideoUploader.API/appsettings.Development.json
@@ -10,6 +10,9 @@
     }
   },
   "AllowedHosts": "*",
+  "UploadSettings": {
+    "AllowedExtensions": [ ".mp4", ".avi", ".mkv", ".mov" ]
+  },
   "RabbitMQConnection": {
     "Host": "localhost",
     "Username": "guest",
