--- a/VideoUploader.API/appsettings.json
+++ b/VideoUploader.API/appsettings.json
@@ -10,6 +10,9 @@
     }
   },
   "AllowedHosts": "*",
+  "UploadSettings": {
+    "AllowedExtensions": [ ".mp4", ".avi", ".mkv", ".mov" ]
+  },
   "RabbitMQConnection": {
     "Host": "rabbitmq",
     "Username": "guest",
