--- a/VideoUploader.Consumer/VideoUploader.Consumer.csproj
+++ b/VideoUploader.Consumer/VideoUploader.Consumer.csproj
@@ -9,16 +9,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="8.1.0" />
 		<PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1" />
 		<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
 		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
 		<PackageReference Include="FFMpegCore" Version="5.2.0" />
 		<PackageReference Include="FFMpegCore.Extensions.SkiaSharp" Version="5.0.2" />
 		<PackageReference Include="FFMpegCore.Extensions.System.Drawing.Common" Version="5.0.2" />
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
 		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
 		<PackageReference Include="ZXing.Net" Version="0.16.10" />
 		<PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.13" />
