--- a/VideoUploader.Consumer/VideoUploader.Consumer.csproj
+++ b/VideoUploader.Consumer/VideoUploader.Consumer.csproj
@@ -9,7 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="8.1.0" />
+		<PackageReference Include="MongoDB.Driver" Version="3.4.3" />
+		<PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="9.0.0" />
 		<PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.2" />
 		<PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1" />
 		<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
