[UPDATE] Realocando o serviços de notificação para o projeto Services

--- a/VideoUploader.Services/VideoUploader.Services.csproj
+++ b/VideoUploader.Services/VideoUploader.Services.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="8.0.19" />
 	</ItemGroup>
 
 	<ItemGroup>
